--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,102 @@
-html,
-body {
-  height: 100%;
+/* Mobile View */
+* {
   margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  background-size: cover;
+  background-position: center; 
+  background-repeat: no-repeat;
+
+}
+
+body,
+section {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-size: cover;
-  background-position: center; 
-  background-repeat: no-repeat; 
 }
 
-div {
-  text-align: center;
+section {
+  flex-direction: row-reverse;
+  background-color: rgba(255, 255 ,255 ,0.6);
+  padding: 5%;
+  border-radius: 4px;
+  position: relative;
+  margin: min(15px);
 }
 
 button {
-  padding: 8px;
+  padding: 10px 20px;
   color: white;
-  background-color: black;
+  background-color: #D70F64;
   border-radius: 8px;
   font-weight: bold;
-  position: fixed;
+  transition: background-color 0.5s, padding 0.2s, margin 0.2s;
+  border: none;
+  margin: 2px 2px 2px; /* Top Right-Left Bottom*/
+  white-space: nowrap;
 }
 
-#joke {
+button:hover {
+  cursor: pointer;
+  background-color: #e42c79;
+  padding: 12px 22px;
+  margin: 0 0 0;
+}
+
+button:active {
+  background-color: #b80550;
+  margin: 4px 0 0;
+  transition: margin 0s;
 }
 
 img {
-  width: 20%;
+  width: 35vw;
+}
+
+p {
+  word-break: break-word;
+  margin: 7% 0 50px;
+}
+
+/* These CSS are in effect after the first 'Get a Joke' button is clicked*/
+section.active {
+  flex-direction: column-reverse;
+  justify-content: space-between;
+}
+
+section.active button {
+  position: absolute;
+  bottom: 5%;
+}
+
+section.active button:active {
+  bottom: calc(5% - 1px);
+
+}
+
+
+/* Tablet View */
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  img {
+    width: 30vw;
+  }
+}
+
+/* Laptop View */
+@media screen and (min-width: 769px) and (max-width: 1279px) {
+  img {
+    width: 25vw;
+  }
+}
+
+/* Monitor View */
+@media screen and (min-width: 1280px) {
+  img {
+    width: 15vw;
+  }
 }
